name:                aeson-forms
version:             0.1.0.0
synopsis:            Digestive functors for JSON
homepage:            https://github.com/lukerandall/aeson-forms
bug-reports:         https://github.com/lukerandall/aeson-forms/issues
license:             BSD3
license-file:        LICENSE
author:              Luke Randall
maintainer:          luke.randall@gmail.com
copyright:           2014 Luke Randall
category:            Text, Web, JSON
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  LICENSE,
  README.md
  TODO.md
  CHANGELOG.md


library
  exposed-modules:
    Data.Aeson.Forms
    Data.Aeson.Forms.Combinators
    Data.Aeson.Forms.Internal.Types
    Data.Aeson.Forms.Testbed
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  build-depends:
    aeson                     >= 0.7.0.4 && < 0.8,
    base                      >= 4.4     && < 5,
    bytestring,
    lens                      >= 4.1     && < 4.3,
    scientific                >= 0.3.1   && < 0.4,
    text                      >= 0.11    && < 1.2,
    unordered-containers      >= 0.2     && < 0.3
